--- a/Pybank/pybank.ipynb
+++ b/Pybank/pybank.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Analysis\n",
+      "----------------------------------------\n",
+      "Total Months: 86\n",
+      "Total Revenue: $38,382,578.00\n",
+      "Average Revenue Change: $-2,315.12\n",
+      "Greatest Increase in Revenue: Jan-2012 ($1,926,159.00)\n",
+      "Greatest Decrease in Revenue: Aug-2013 ($-2,196,167.00)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import csv\n",
@@ -19,7 +33,7 @@
     "\n",
     "\n",
     "# open csv file\n",
-    "bank_csv = os.path.join(\"C:\\\\Users\\\\mehar\\\\Documents\\\\Python\\\\Python-Challenge\\\\Pybank\\\\budget-data.csv\")\n",
+    "bank_csv = os.path.join(\"resources/budget-data.csv\")\n",
     "\n",
     "with open(bank_csv,'r', newline=\"\") as csvfile:\n",
     "    csvreader = csv.reader(csvfile, delimiter=\",\")\n",
@@ -76,18 +90,6 @@
    "display_name": "Python [conda env:.conda-PythonData] *",
    "language": "python",
    "name": "conda-env-.conda-PythonData-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
   }
  },
  "nbformat": 4,
