--- a/Pybank/pybank.ipynb
+++ b/Pybank/pybank.ipynb
@@ -90,6 +90,18 @@
    "display_name": "Python [conda env:.conda-PythonData] *",
    "language": "python",
    "name": "conda-env-.conda-PythonData-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
